[package]
name = "easy-ml"
version = "1.4.0"
authors = ["Skeletonxf <skeletonxf@gmail.com>"]
edition = "2018"
repository = "https://github.com/Skeletonxf/easy-ml"
description = "Matrix and linear algebra library aimed at being easy to use"
keywords = ["machine-learning", "machine", "learning", "matrices", "linear-algebra"]
categories = ["science", "wasm"]
readme = "README.md"
license = "MPL-2.0"

[dependencies]

[dev-dependencies]
rand = "0.7"
rand_chacha = "0.2"
textplots = "=0.5.2" # compile errors are introduced with later 0.5.x versions
num-bigint = "0.3"
num-traits = "0.2"
js-sys = "0.3"
