[package]
name = "easy-ml"
version = "2.1.0"
authors = ["Skeletonxf <skeletonxf@gmail.com>"]
edition = "2024"
repository = "https://github.com/Skeletonxf/easy-ml"
description = "Machine learning library providing matrices, named tensors, linear algebra and automatic differentiation aimed at being easy to use"
keywords = ["machine-learning", "tensors", "matrices", "linear-algebra"]
categories = ["science", "wasm"]
readme = "README.md"
license = "MPL-2.0"

[features]
default = []
serde = ["dep:serde", "dep:serde_arrays"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"
textplots = "0.8"
num-bigint = "0.4"
num-traits = "0.2"
js-sys = "0.3"
toml = "0.5.11"
rgb = "0.8"

[lints.clippy]
doc_lazy_continuation = "allow"
